Import of RCAPUTO/Bot-Pastebot-0.52 from CPAN.
gitpan-cpan-distribution: Bot-Pastebot
gitpan-cpan-version:      0.52
gitpan-cpan-path:         RCAPUTO/Bot-Pastebot-0.52.tar.gz
gitpan-cpan-author:       RCAPUTO
gitpan-cpan-maturity:     released

--- a/static/highlights.css
+++ b/static/highlights.css
@@ -1,6 +1,6 @@
 <style type="text/css">
 <!--
-/* $Id: /my/pastebot/static/highlights.css 2247 2006-09-29T05:51:05.171275Z troc  $ */
+/* $Id: highlights.css 104 2006-10-01 22:10:08Z rcaputo $ */
 body {
   background: #FFFFFF;
   color: #000000
